--- a/FirstWebSight/src/main/resources/static/images/styles.css
+++ b/FirstWebSight/src/main/resources/static/images/styles.css
@@ -1,14 +1,14 @@
-div.ingredient-group:nth-child(odd) {
+div.component-group:nth-child(odd) {
 	float: left;
 	padding-right: 20px;
 }
 
-div.ingredient-group:nth-child(even) {
+div.component-group:nth-child(even) {
     float: left;
 	padding-right: 0;
 }
 
-div.ingredient-group {
+div.component-group {
 	width: 50%;
 }
 
