--- a/FirstWebSight/src/main/resources/templates/createOrder.html
+++ b/FirstWebSight/src/main/resources/templates/createOrder.html
@@ -10,32 +10,32 @@
 <img th:src="@{/images/test.png}"/>
 <form method="POST" th:object="${order}">
     <span class="validationError"
-          th:if="${#fields.hasErrors('ingredients')}"
-          th:errors="*{ingredients}">ingredients error</span>
+          th:if="${#fields.hasErrors('components')}"
+          th:errors="*{components}">components error</span>
     </br>
     <div class="grid">
-        <div class="ingredient-group" id="fruits">
+        <div class="component-group" id="fruits">
             <h3>Choose your fruit:</h3>
-            <div th:each="ingredient : ${fruit}">
-                <input name="ingredients" type="checkbox" th:value="${ingredient.id}"
+            <div th:each="component : ${fruit}">
+                <input name="components" type="checkbox" th:value="${component.id}"
                 />
-                <span th:text="${ingredient.name}">INGREDIENT</span><br/>
+                <span th:text="${component.name}">COMPONENT</span><br/>
             </div>
         </div>
     </div>
-    <div class="ingredient-group" id="snacks">
+    <div class="component-group" id="snacks">
         <h3>Pick your snack:</h3>
-        <div th:each="ingredient : ${snack}">
-            <input name="ingredients" type="checkbox" th:value="${ingredient.id}" />
-            <span th:text="${ingredient.name}">INGREDIENT</span><br/>
+        <div th:each="component : ${snack}">
+            <input name="components" type="checkbox" th:value="${component.id}" />
+            <span th:text="${component.name}">COMPONENT</span><br/>
         </div>
     </div>
 
-    <div class="ingredient-group" id="drinks">
+    <div class="component-group" id="drinks">
         <h3>Choose your drink:</h3>
-        <div th:each="ingredient : ${drinks}">
-            <input name="ingredients" type="checkbox" th:value="${ingredient.id}" />
-            <span th:text="${ingredient.name}">INGREDIENT</span><br/>
+        <div th:each="component : ${drinks}">
+            <input name="components" type="checkbox" th:value="${component.id}" />
+            <span th:text="${component.name}">COMPONENT</span><br/>
         </div>
     </div>
     <div>
